Bug 450190 - The LSP server is started once per window
Summary: The LSP server is started once per window
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.12.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-14 01:10 UTC by Louis Moureaux
Modified: 2022-05-30 19:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Louis Moureaux 2022-02-14 01:10:04 UTC
SUMMARY

When two windows are open, each starts its own LSP server. This results in a waste of resources and duplicated work. RAM usage is especially bad since for large code bases, clang-format easily reaches 1GB per instance.

STEPS TO REPRODUCE
1. Open a file type with LSP support (and, obviously, the LSP plugin enabled). I use clang-format with C++.
2. Open a new window (View > New window)
3. Open your task manager and count the number of LSP server instances

OBSERVED RESULT

There are as many LSP servers as there are windows open.

EXPECTED RESULT

A single LSP server is spawned.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.24.0
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Comment 1 Christoph Cullmann 2022-03-05 18:47:31 UTC
Interesting.
This is strange, I would have assumed that is plugin global.
Comment 2 Bug Janitor Service 2022-05-27 22:04:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/751
Comment 3 Christoph Cullmann 2022-05-30 19:32:47 UTC
Git commit 52e3c20722ea81ab2245119fa1dca4ca075ca6d7 by Christoph Cullmann, on behalf of Mark Nauwelaerts.
Committed on 30/05/2022 at 19:28.
Pushed by cullmann into branch 'master'.

lspclient: create a single servermanager at plugin level

M  +5    -1    addons/lspclient/lspclientplugin.cpp
M  +6    -0    addons/lspclient/lspclientplugin.h
M  +4    -7    addons/lspclient/lspclientpluginview.cpp
M  +2    -1    addons/lspclient/lspclientpluginview.h
M  +58   -31   addons/lspclient/lspclientservermanager.cpp
M  +1    -1    addons/lspclient/lspclientservermanager.h

https://invent.kde.org/utilities/kate/commit/52e3c20722ea81ab2245119fa1dca4ca075ca6d7