lspclient: create a single servermanager at plugin level

BUG: 450190